--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,10 +29,56 @@ header
 
         @include breakpoints.mq(){
             height: 100vh;
-            display: none;
+            width: 100%;
+            visibility: hidden;
             position: fixed;
             top: 0;
             left: 0;
+            
+            &::before{
+                content: "";
+                width: 0;
+                height: 100%;
+                background-color: color.$red;
+                position: absolute;
+                top: 0;
+                left: 0;
+                transition: all 0.3s ease 0s;
+            }
+
+            &::after{
+                content: "";
+                width: 0;
+                height: 100%;
+                background-color: color.$blue;
+                position: absolute;
+                top: 0;
+                right: 0;
+                transition: all 0.3s ease 0s;
+            }
+        }
+
+        &.is-open{
+
+            @include breakpoints.mq(){
+                width: 100%;
+                visibility: visible;
+                left: 50%;
+                transform: translateX(-50%);
+
+                &::before{
+                    width: 50%;
+                }
+
+                &::after{
+                    width: 50%;
+                }
+            }
+
+            ul{
+                opacity: 1;
+                visibility: visible;
+            }
         }
 
         ul{
@@ -41,10 +87,23 @@ header
 
             @include breakpoints.mq(){
                 display: block;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                z-index: 1;
+                visibility: hidden;
+                opacity: 0;
+                transition: all 0.5s ease 0s;
             }
 
             li{
                 margin-left: 4rem;
+
+                @include breakpoints.mq(){
+                    margin-left: 0;
+                    margin-bottom: 1em;
+                }
                 
                 a{
                     font-family: font.$oswald;
@@ -67,7 +126,15 @@ header
         height: 5rem;
         width: 5rem;
         margin-left: auto;
-        background-image: url(../img/burger-close.svg);
+        background-image: url(../img/burger-close-white.svg);
+        transition: all 0.3s ease 0s;
+        animation: fadeOut 0.3s ease;
+
+        &.is-open{
+            background-image: url(../img/burger-open-white.svg);
+            transition: all 0.3s ease 0s;
+            animation: fadeIn 0.3s ease;
+        }
     }
 }
 
@@ -340,7 +407,7 @@ menu
             transform: translateY(-50%);
 
             @include breakpoints.mq(){
-                width: 55%;
+                width: 45%;
             }
         }
 
@@ -351,7 +418,7 @@ menu
             transform: translateY(-50%);
 
             @include breakpoints.mq(){
-                width: 40%;
+                width: 35%;
             }
         }
 
@@ -374,7 +441,7 @@ menu
             width: 100vw;
             margin: 0 calc(50% - 50vw);
             height: 300px;
-            margin-bottom: 12rem;
+            margin-bottom: 8rem;
             position: relative;
 
             @include breakpoints.mq(){
@@ -460,6 +527,35 @@ menu
             right: -13%;
             z-index: -1;
             transform: rotateZ(30deg);
+
+            @include breakpoints.mq(){
+                width: 150px;
+                height: 150px;
+                right: 16%;
+            }
+        }
+
+        .mdl{
+            display: none;
+            background-color: rgba($color: #000000, $alpha: 8);
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            overflow-x: scroll;
+
+            &.is-show{
+                display: block;
+            }
+
+            img{
+                position: absolute;
+                top: 50%;
+                left: 40%;
+                transform: translateY(-50%) scale(1.7);
+            }
         }
     }
     
