--- a/src/scss/animation/_animate.scss
+++ b/src/scss/animation/_animate.scss
@@ -19,3 +19,12 @@
         opacity: 0;
     }
 }
+
+@keyframes loopSlider {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-100vw);
+    }
+}
