--- a/src/scss/parts/_common.scss
+++ b/src/scss/parts/_common.scss
@@ -61,22 +61,26 @@
 body{
 	font-size: 1.8rem;
 	/* 1080px基準 最大18px 1080px以下で縮小 最小16px */
-	font-size: clamp(1.6rem, 1.667vw, 1.8rem);
+	// font-size: clamp(1.6rem, 1.667vw, 1.8rem);
 }
 
 h2{
 	font-size: 3.6rem;
-	font-size: clamp(2.4rem, 3.344vw, 3.6rem);
+	font-size: clamp(3rem, 3.344vw, 3.6rem);
 }
 
 h3{
 	font-size: 3rem;
-	font-size: clamp(2rem, 2.778vw, 3rem);
+	font-size: clamp(2.4rem, 2.778vw, 3rem);
 }
 
 h4{
 	font-size: 2.4rem;
 	font-size: clamp(1.8rem, 2.223vw, 2.4rem);
+}
+
+p{
+	font-size: 1.8rem;
 }
 
 /*---------------------------------------
