--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+@use "animation/animate";
 @use "breakpoints/breakpoints";
 @use "parts/common";
 @use "color/color";
@@ -144,6 +145,28 @@ header
         }
     }
 
+    .sp-header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header__logo{
+        font-family: font.$oswald;
+        font-weight: bold;
+        font-size: 3rem;
+        position: relative;
+        z-index: 100;
+        
+        a{
+            color: #fff;
+        }
+    }
+
+    &.is-change .header__logo a{
+        color: color.$brawn;
+    }
+
     .hamburger{
         position: relative;
         height: 5rem;
@@ -182,18 +205,37 @@ mv
     position: relative;
     overflow-y: hidden;
 
+    &::before{
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #fff, $alpha: 0.1);
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+
     .logo{
         max-width: 300px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        z-index: 2;
     }
 
-    .slick-slide img{
+    .slick-slider img{
         object-fit: cover;
         height: 100vh;
         width: 100vw;
+        transform-origin: center top;
+        transform: scale(1.1);
+        transition: transform 4s ease-out;
+    }
+
+    .slick-slider .slick-active img{
+        transform: scale(1);
     }
 }
 
@@ -219,7 +261,7 @@ section{
     padding: 12rem 0;
 
     @include breakpoints.mq(){
-        padding: 6rem 0;
+        padding: 3rem 0;
     }
 
     .section__title{
@@ -232,8 +274,10 @@ section{
 
         h2{
             img{
+                width: 100%;
                 max-width: 500px;
                 margin: 0 auto;
+                filter: drop-shadow(2px 2px 4px #ddd);
             }
         }
     }
@@ -294,8 +338,12 @@ news
             a{
                 display: block;
 
+                &:last-child .news__item{
+                    margin-bottom: 0;
+                }
+
                 &:hover{
-                    opacity: 0.8;
+                    opacity: 0.7;
                 }
             }
 
@@ -373,17 +421,21 @@ concept
             position: relative;
             z-index: 1;
 
+            @include breakpoints.mq(){
+                margin-bottom: 6rem;
+            }
+
                 &::before{
                 content: "";
                 background-image: url(../img/cow.png);
                 background-size: contain;
-                width: 35%;
-                padding-top: 25%;
+                width: 45%;
+                padding-top: 30%;
                 position: absolute;
-                top: -100%;
-                left: 15%;
+                top: 0;
+                left: 5%;
                 z-index: 0;
-                opacity: 0.3;
+                opacity: 0.1;
 
                 @include breakpoints.mq(){
                     padding-top: 50%;
@@ -396,12 +448,12 @@ concept
                 content: "";
                 background-image: url(../img/america.png);
                 background-size: contain;
-                width: 35%;
+                width: 40%;
                 padding-top: 25%;
                 position: absolute;
-                top: -100%;
-                right: 15%;
-                opacity: 0.3;
+                top: 0%;
+                right: 5%;
+                opacity: 0.1;
                 z-index: 0;
 
                 @include breakpoints.mq(){
@@ -413,6 +465,32 @@ concept
 
             h3{
                 position: relative;
+                font-size: clamp(2.8rem, 4.63vw, 5rem);
+                letter-spacing: 5px;
+                z-index: 1;
+                border-bottom: 5px solid color.$brawn;
+                padding-top: 1.5em;
+                display: flex;
+
+                @include breakpoints.mq(){
+                    font-size: 3rem;
+                    letter-spacing: normal;
+                }
+
+
+                .concept__heading--center{
+                    left: 50%;
+                }
+
+                .concept__heading--left{
+                    color: color.$blue;
+                    flex: 1;
+                }
+
+                .concept__heading--right{
+                    color: color.$red;
+                    flex: 1;
+                }
             }
 
         }
@@ -454,7 +532,7 @@ menu
             transform: translateY(-50%);
 
             @include breakpoints.mq(){
-                width: 35%;
+                width: 30%;
             }
         }
 
@@ -612,9 +690,39 @@ gallery
 ---------------------------------------*/
 
 .gallery{
+    overflow: hidden;
 
     .gallery__wrap{
         position: relative;
+
+        .gallery__slider{
+            width: 100%;
+            height: auto;
+
+            #sb_instagram #sbi_images{
+                display: grid;
+                width: 200vw;
+                grid-template-columns: repeat(9, 1fr);
+                margin: 0 calc(50% - 50vw);
+                animation: loopSlider 20s linear infinite alternate;
+
+                @include breakpoints.mq(){
+                    width: 400vw;
+                }
+            }
+            #sb_instagram.sbi_col_3 #sbi_images .sbi_item{
+                width: 100%;
+                
+                .sbi_photo{
+                    height: auto!important;
+                    padding-top: 100%;
+                }
+            }
+
+            #sbi_load{
+                display: none;
+            }
+        }
 
         &::before{
             content: "";
@@ -628,6 +736,7 @@ gallery
             left: 50%;
             transform: translate(-50%, -50%);
             opacity: 0.1;
+            z-index: -1;
         }
     }
 }
@@ -639,6 +748,39 @@ sns
 ---------------------------------------*/
 
 .sns{
+
+    .sns__timeline{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 2rem;
+
+        @include breakpoints.mq(){
+            display: block;
+        }
+
+        .sns__twitter{
+            width: 40%;
+
+            @include breakpoints.mq(){
+                width: 100%;
+                margin-bottom: 2rem;
+            }
+        }
+
+        .sns__insta{
+            width: 40%;
+            background-color: #fff;
+
+            @include breakpoints.mq(){
+                width: 100%;
+            }
+
+            #sb_instagram.sbi_col_3 #sbi_images .sbi_item{
+                width: 100%;
+            }
+        }
+    }
 
     .sns__line{
 
@@ -758,11 +900,16 @@ footer{
         margin-bottom: 6rem;
 
         @include breakpoints.mq(){
-            justify-content: center;
+            display: block;
+            margin-bottom: 3rem;
         }
 
         .logo{
             width: 150px;
+
+            @include breakpoints.mq(){
+                margin: 0 auto;
+            }
 
             @include breakpoints.mq(){
                 margin-bottom: 2rem;
@@ -803,6 +950,7 @@ footer{
                 a{
                     color: #fff;
                     font-family: font.$oswald;
+                    font-weight: bold;
                     font-size: 1.35em;
                 }
             }
